--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "bcryptjs": "^2.4.3",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
     "react-social-login-buttons": "^4.1.0"
